--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mkdocs = "^1.0"
 black = "^20.8b1"
 isort = "^5.6.4"
 autoflake = "^1.4"
+pytype = {version = "^2020.10.8", markers = "python_version>='3.6' and python_version<'3.9' and sys_platform!='win32'"}  # Skip on Windows
 
 [tool.black]
 line-length = 100
