--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
-mkdocs
-mkdocs-material
-mkdocstrings
-mkdocs-gen-files
-mkdocs-section-index
-mkdocs-awesome-pages-plugin
+mkdocs>=1.1.2
+mkdocs-material>=7.1.4
+mkdocstrings>=0.15.0
+mkdocs-gen-files>=0.3.2
+mkdocs-section-index>=0.3.0
+mkdocs-awesome-pages-plugin>=2.5.0
+pymdown-extensions>=8.2
