--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.7"
 mkdocs = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.1.2"
 black = "^20.8b1"
 isort = "^5.6.4"
 autoflake = "^1.4"
@@ -31,6 +32,12 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.pytest.ini_options]
+addopts = "--tb=native"
+enable_assertion_pass_hook = true
+filterwarnings = ["ignore::DeprecationWarning:.*:",
+                  "default::DeprecationWarning:mkdocs_gen_files.*:"]
 
 [build-system]
 requires = ["poetry>=0.12"]
