--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mkdocs = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
+pytest-golden = ">=0.2.0"
 black = "^20.8b1"
 isort = "^5.6.4"
 autoflake = "^1.4"
