--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,5 @@ mkdocs>=1.1.2
 mkdocs-material>=7.1.4
 mkdocstrings>=0.15.0
 mkdocs-gen-files>=0.3.2
-mkdocs-section-index>=0.3.0
-mkdocs-awesome-pages-plugin>=2.5.0
+mkdocs-literate-nav>=0.4.0
 pymdown-extensions>=8.2
