--- a/tests/nav/test_nav_special_chars.yml
+++ b/tests/nav/test_nav_special_chars.yml
@@ -1,3 +1,7 @@
+code: |
+  nav["__init__"] = "a.md"
+  nav["__init__.py"] = "a.md"
+  nav["`hi`"] = "a.md"
 output: |
   * [\__init__](a.md)
   * [\__init__.py](a.md)
