--- a/tests/nav/test_nav_with_index_item.yml
+++ b/tests/nav/test_nav_with_index_item.yml
@@ -1,3 +1,6 @@
+code: |
+  nav["Hello", "World"] = "hello/world.md"
+  nav["Hello"] = "hello/index.md"
 output: |
   * [Hello](hello/index.md)
       * [World](hello/world.md)
