--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,10 @@ mkdocs = "^1.0.3"
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
 pytest-golden = ">=0.2.0"
-black = "^20.8b1"
+black = ">=20.8b1"
 isort = "^5.6.4"
 autoflake = "^1.4"
-pytype = {version = "^2021.04.15", markers = "python_version>='3.6' and python_version<'3.10' and sys_platform!='win32'"}  # Skip on Windows
+pytype = {version = ">=2021.04.15", markers = "python_version>='3.6' and python_version<'3.10' and sys_platform!='win32'"}  # Skip on Windows
 
 [tool.black]
 line-length = 100
