--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v2
       - name: Install dependencies
-        run: pip install . -r docs/requirements.txt
+        run: pip install --no-deps -r docs/requirements.txt && pip install .
       - name: Build site
         run: mkdocs build
       - name: Deploy to gh-pages
