--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Pin to lowest versions
         if: matrix.versions == 'minimal'
         run: |
-          sed -i -E 's/"(\^|>=)([0-9])/"==\2/' pyproject.toml
+          sed -i -E 's/#min //; s/"(\^|>=)([0-9])/"==\2/' pyproject.toml
       - name: Setup virtualenv
         uses: syphar/restore-virtualenv@d0a933d92488e0505e012c3367e3f987a6276f5a
         with:
