--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - python: '^3.9'
+          - python: '^3.10'
             os: macos-latest
-          - python: 3.8
+          - python: '3.10'
+            os: windows-latest
+          - python: 3.9
             os: ubuntu-latest
+          - python: 3.8
+            os: macos-latest
           - python: 3.7
             os: windows-latest
           - python: 3.7
