--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ dependencies = [
 [tool.hatch.envs.style.scripts]
 format = [
     "find mkdocs_gen_files tests -name '*.py' | xargs pyupgrade --exit-zero-even-if-changed --py37-plus",
-    "autoflake -i -r --remove-all-unused-imports --remove-unused-variables mkdocs_gen_files tests",
+    "autoflake -r mkdocs_gen_files tests",
     "isort -q mkdocs_gen_files tests",
     "black -q mkdocs_gen_files tests",
 ]
@@ -111,6 +111,12 @@ line-length = 100
 [tool.isort]
 profile = "black"
 line_length = 100
+
+[tool.autoflake]
+in-place = true
+remove-all-unused-imports = true
+remove-unused-variables = true
+expand-star-imports = true
 
 [tool.mypy]
 ignore_missing_imports = true
