Upgrade docs dependencies

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ use_directory_urls: false
 theme:
   name: material
   features:
+    - content.action.edit
     - navigation.tabs
     - toc.integrate
   icon:
@@ -42,10 +43,19 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.snippets:
       check_paths: true
+      base_path:
+        - !relative $config_dir
   - admonition
   - def_list
   - toc:
       permalink: "#"
+
+validation:
+  omitted_files: warn
+  absolute_links: warn
+  unrecognized_links: warn
+  nav:
+    absolute_links: ignore
 
 nav:
   - section-index: /mkdocs-section-index/
@@ -56,3 +66,5 @@ nav:
     - Extras: extras.md
     - Sample: sample/
   - same-dir: /mkdocs-same-dir/
+  - code-validator: /mkdocs-code-validator/
+  - callouts: /markdown-callouts/
