--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
       - name: Install dependencies
-        run: pip install --no-deps -r docs/requirements.txt && pip install .
+        run: pip install --no-deps -r requirements/requirements-docs.txt && pip install .
       - name: Build site
-        run: mkdocs build
+        run: mkdocs build --strict
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
