--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ format = [
 [tool.hatch.envs.docs]
 type = "pip-compile"
 pip-compile-hashes = false
+detached = false
 
 [tool.ruff]
 line-length = 100
