--- a/requirements/requirements-docs.txt
+++ b/requirements/requirements-docs.txt
@@ -8,6 +8,7 @@
 # - mkdocstrings
 # - mkdocstrings-python
 # - pymdown-extensions
+# - mkdocs>=1.4.1
 #
 
 babel==2.13.1
@@ -49,7 +50,7 @@ mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.5.3
     # via
-    #   -r -
+    #   hatch.envs.docs
     #   mkdocs-autorefs
     #   mkdocs-gen-files
     #   mkdocs-literate-nav
@@ -58,17 +59,19 @@ mkdocs==1.5.3
 mkdocs-autorefs==0.5.0
     # via mkdocstrings
 mkdocs-gen-files==0.5.0
-    # via -r -
+    # via hatch.envs.docs
 mkdocs-literate-nav==0.6.1
-    # via -r -
+    # via hatch.envs.docs
 mkdocs-material==9.4.7
-    # via -r -
+    # via hatch.envs.docs
 mkdocs-material-extensions==1.3
     # via mkdocs-material
 mkdocstrings==0.23.0
-    # via mkdocstrings-python
+    # via
+    #   hatch.envs.docs
+    #   mkdocstrings-python
 mkdocstrings-python==1.7.3
-    # via -r -
+    # via hatch.envs.docs
 packaging==23.2
     # via mkdocs
 paginate==0.5.6
@@ -81,7 +84,7 @@ pygments==2.16.1
     # via mkdocs-material
 pymdown-extensions==10.3.1
     # via
-    #   -r -
+    #   hatch.envs.docs
     #   mkdocs-material
     #   mkdocstrings
 python-dateutil==2.8.2
